--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-/*common elemenets*/
 body {
 	font-size: 67.5%;
 	font-family: 'Droid Serif', serif;
@@ -12,6 +11,7 @@ body {
 	text-align : center ;
 	vertical-align: middle;
 }
+/*common elemenets: see above and below*/
 
 h1{
 	text-align: center;
